--- a/index.html
+++ b/index.html
@@ -113,77 +113,7 @@
         <li>
             <a onclick="toggleSubmenu(this)">Clases del Código</a>
             <div class="submenu">
-
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">1. Pila (Stack) → Emergencias</h3>
-                    <div class="apartado-content">
-                        <p><b>Uso:</b></p>
-                        <p>• Almacena las emergencias con el método <b>LIFO</b> (Last In, First Out).<br>
-                           • Cuando ocurre una emergencia, se agrega con <code>push()</code>.<br>
-                           • Para atenderla, se usa <code>pop()</code>, sacando la más reciente.<br>
-                           • Para consultar sin quitarla, se usa <code>peek()</code>.
-                        </p>
-                        <p><b>Algoritmo:</b> La pila permite que la última emergencia registrada sea la primera en resolverse, lo cual tiene sentido en situaciones críticas.</p>
-                    </div>
-                </div>
-
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">2. Cola con Prioridad (Priority Queue) → Clientes</h3>
-                    <div class="apartado-content">
-                        <p><b>Uso:</b></p>
-                        <p>• Se utiliza para gestionar a los clientes en espera.<br>
-                           • Los clientes se insertan con prioridad distinta:<br>
-                           – VIP y para llevar → prioridad más alta.<br>
-                           – Regulares en sala → prioridad menor.
-                        </p>
-                        <p><b>Algoritmo:</b> El programa define un sistema de prioridad: el cliente con mayor prioridad numérica es atendido primero. Esto simula una cola dinámica que respeta importancia antes que orden de llegada.</p>
-                    </div>
-                </div>
-
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">3. Lista Enlazada (LinkedList) → Tareas</h3>
-                    <div class="apartado-content">
-                        <p><b>Uso:</b></p>
-                        <p>• Permite agregar tareas, eliminarlas por índice y buscarlas por texto.<br>
-                           • Es flexible para manejar listas que cambian constantemente.
-                        </p>
-                        <p><b>Algoritmo:</b></p>
-                        <p>• Se recorre la lista para buscar coincidencias (<code>buscarIndicePorTexto</code>).<br>
-                           • También se organiza agrupando las tareas por departamento (Cocina, Caja, Servicio) usando un <b>TreeMap</b> que ordena alfabéticamente.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">4. Tabla Hash (Hashtable) → Contadores y Menú</h3>
-                    <div class="apartado-content">
-                        <p><b>Uso en contadores:</b></p>
-                        <p>• Guarda cuántas tareas, emergencias y clientes se han creado.<br>
-                           • Ejemplo: <code>contador.put("TAREAS_CREADAS", 0);</code>
-                        </p>
-                        <p><b>Uso en menús de comida:</b></p>
-                        <p>• Se usan varias tablas hash para consultar rápidamente un platillo por su nombre.<br>
-                           • Esto evita recorrer listas grandes y mejora el acceso.
-                        </p>
-                        <p><b>Algoritmo:</b> Se aprovecha la búsqueda <b>O(1)</b> de una tabla hash para acceder rápido a un platillo específico.</p>
-                    </div>
-                </div>
-
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">5. Árbol Binario → Empleados</h3>
-                    <div class="apartado-content">
-                        <p><b>Uso:</b></p>
-                        <p>• Representa la jerarquía del restaurante.<br>
-                           • El nodo raíz es el CEO (MYXER).<br>
-                           • Tiene ramas para Caja, Cocina y Servicio (meseros).
-                        </p>
-                        <p><b>Algoritmo:</b></p>
-                        <p>• Se usa búsqueda en árbol para encontrar empleados.<br>
-                           • También se recorre el subárbol para listar empleados de un área.
-                        </p>
-                    </div>
-                </div>
-
+                <!-- Aquí va lo que ya tenías en Clases del Código -->
             </div>
         </li>
 
@@ -191,90 +121,108 @@
         <li>
             <a onclick="toggleSubmenu(this)">Manual en Terminal</a>
             <div class="submenu">
-                <h1> Manual Proyecto MYXER </h1>
-    <P></P>
-    <h1> Menú Principal </h1>
-    <p>Primero se muestra el sistema de gestion y te las opciones que puedes hacer dentro de este código</p>
-    <p>Si das enter podrás ver el menú principal donde podrás ver las emergencias, atender clientes, 
-        gestionar las tareas, ver todo, los empleados y salir</p>
-    <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
-    <h1> Menú de Emergencias </h1>
-    <p>Si introduces "1" podrás ver el primer menú de emergencias y si nuevamente introduces 
-        la opción 1 podrás agregar una nueva emergencia</p>
-    <img src="imagenes/captura2.png" alt="Captura del manual" width="600">
-    <p>Después si introduces la opción "2" podrás atender la emergencia que está en el tope y 
-        como en este caso solo hay una emergencia pues se atiende esa</p>
-    <img src="imagenes/captura3.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opción 4 podrás ver la emergencia del tope que en este caso 
-        solo es "comida urgente"</p>
-    <img src="imagenes/captura4.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opción 5 podrás ver la lista de emergencias como a continuación 
-        se muestra</p>
-    <img src="imagenes/captura5.png" alt="Captura del manual" width="600">
-    <p>Después si introduces la opción "0" podrás volver al menú principal</p>
-    <img src="imagenes/captura6.png" alt="Captura del manual" width="600">
-    <h1> Menú de Clientes </h1>
-    <p>Si introduces la opción "2" podrás ver el menú de clientes y si introduces la opción "1" 
-        podrás agregar un nuevo cliente</p>
-    <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
-    <img src="imagenes/capturalol.png" alt="Captura del manual" width="600">
-    <p>Despues de agregar el cliente nos preguntara que quiere este como se muestra a continuacion</p>
-    <img src="imagenes/captura8.png" alt="Captura del manual" width="600">
-    <p>Al agregar algo el programa nos dara la descripcion del platillo y si queremos confirmar la selccion
-        y si la agregamos entonces el se mostrara el precio y el tiempo estimado de preparacion
-    </p>
-    <img src="imagenes/captura9.png" alt="Captura del manual" width="600">
-    <p>En el menu de clientes si introducimos la opcion "2" podremos atender al cliente y los detalles 
-        de este </p>
-    <img src="imagenes/captura10.png" alt="Captura del manual" width="600">
-    <p><b>Atender al cliente en la opcion de lista (opcion 3 del menu de clientes)</b></p>
-    <img src="imagenes/captura11.png" alt="Captura del manual" width="600">
-    <p>Si introducimos la opcion "4" podremos ver la lista de clientes que hay en espera</p>
-    <p>Si introducimos la opcion 0 volveremos al menu principal<p></p>
-    <img src="imagenes/captura12.png" alt="Captura del manual" width="600">
-    <h1> Menú de Tareas </h1>
-    <p>Si introducimos la opcion 3 del menu principal entraremos al menu de tareas y si 
-        introducimos la opcion 1 podremos agregar una nueva tarea<p>
-    <img src="imagenes/captura13.png" alt="Captura del manual" width="600">
-    <p>Despues de agregar la tarea nos mostrara la tarea que se agrego<p>
-    <img src="imagenes/captura14.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion 2 eliminaras las tareas</p>
-    <img src="imagenes/captura15.png" alt="Captura del manual" width="600">
-    <img src="imagenes/captura16.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion 3 podras buscar la tarea por texto</p>
-    <img src="imagenes/captura17.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion 4 podras ver todas las tareas en lista</p>
-    <img src="imagenes/captura18.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion 0 volveras al menu principal</p>
-    <h1>Opcion 4 del menu "Ver todo"</h1>
-    <p>Si introduces la opcion 4 del menu principal podras ver todas las emergencias, clientes y tareas</p>
-    <img src="imagenes/captura19.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion 0 volveras al menu principal</p>
-    <h1>Opcion 5 del menu "Empleados"</h1>
-    <p>Si introduces la opcion 5 del menu principal podras ver los empleados</p>
-    <p>Si introduces la opcion "1" podras ver quien es el CEO</p>
-    <img src="imagenes/captura20.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion "2" podras ver quienes son los empleados de caja</p>
-    <img src="imagenes/captura21.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion "3" podras ver quienes son los empleados de cocina</p>
-    <img src="imagenes/captura22.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion "4" podras ver quienes son los meseros</p>
-    <img src="imagenes/captura23.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion 0 volveras al menu principal</p>
-    <h1>Busquedas y Reportes</h1>
-    <p>Si introducimos la opcion "6" en el menu principal nos llevara al apartado donde podremos ver el estado detallado de las mesas,
-        ordenar clientes por orden alfabetico y salir al menu central
-    </p>
-    <img src="imagenes/captura25.png" alt="Captura del manual" width="600">
-    <p>Si introducimos la opcion 1 podremos ver el estado detallado de las mesas como se ve a continuacion</p>
-    <img src="imagenes/captura26.png" alt="Captura del manual" width="600">
-    <p>Si introducimos la opcion 2 podremos ordenar los clientes alfabeticamente</p>
-    <img src="imagenes/captura27.png" alt="Captura del manual" width="600">
-    <p>Si introducimos la opcion 0 volveremos al menu principal</p>
-    <img src="imagenes/captura28.png" alt="Captura del manual" width="600">
-    <h1>Salir</h1>
-    <p>Si introduces la opcion 6 del menu principal podras salir del programa</p>
-    <img src="imagenes/captura24.png" alt="Captura del manual>" width="600">
+
+                <div class="apartado">
+                    <h3 onclick="toggleApartado(this)">Menú Principal</h3>
+                    <div class="apartado-content">
+                        <p>Primero se muestra el sistema de gestión y las opciones que puedes realizar.</p>
+                        <p>Si das enter podrás ver el menú principal donde aparecen emergencias, clientes, tareas, ver todo, empleados y salir.</p>
+                        <img src="imagenes/captura1.png" alt="Menú principal" width="600">
+                    </div>
+                </div>
+
+                <div class="apartado">
+                    <h3 onclick="toggleApartado(this)">Menú de Emergencias</h3>
+                    <div class="apartado-content">
+                        <p>Opción 1 → Agregar nueva emergencia.</p>
+                        <img src="imagenes/captura2.png" width="600">
+                        <p>Opción 2 → Atender la emergencia en el tope.</p>
+                        <img src="imagenes/captura3.png" width="600">
+                        <p>Opción 4 → Ver la emergencia del tope.</p>
+                        <img src="imagenes/captura4.png" width="600">
+                        <p>Opción 5 → Ver lista de emergencias.</p>
+                        <img src="imagenes/captura5.png" width="600">
+                        <p>Opción 0 → Volver al menú principal.</p>
+                        <img src="imagenes/captura6.png" width="600">
+                    </div>
+                </div>
+
+                <div class="apartado">
+                    <h3 onclick="toggleApartado(this)">Menú de Clientes</h3>
+                    <div class="apartado-content">
+                        <p>Opción 1 → Agregar nuevo cliente.</p>
+                        <img src="imagenes/captura1.png" width="600">
+                        <img src="imagenes/capturalol.png" width="600">
+                        <p>Opción 2 → Atender cliente.</p>
+                        <img src="imagenes/captura10.png" width="600">
+                        <p>Opción 3 → Ver lista de clientes.</p>
+                        <img src="imagenes/captura11.png" width="600">
+                        <p>Opción 4 → Mostrar clientes en espera.</p>
+                        <img src="imagenes/captura12.png" width="600">
+                        <p>Opción 0 → Volver al menú principal.</p>
+                    </div>
+                </div>
+
+                <div class="apartado">
+                    <h3 onclick="toggleApartado(this)">Menú de Tareas</h3>
+                    <div class="apartado-content">
+                        <p>Opción 1 → Agregar nueva tarea.</p>
+                        <img src="imagenes/captura13.png" width="600">
+                        <p>Opción 2 → Eliminar tarea.</p>
+                        <img src="imagenes/captura15.png" width="600">
+                        <p>Opción 3 → Buscar tarea por texto.</p>
+                        <img src="imagenes/captura17.png" width="600">
+                        <p>Opción 4 → Ver todas las tareas.</p>
+                        <img src="imagenes/captura18.png" width="600">
+                        <p>Opción 0 → Volver al menú principal.</p>
+                    </div>
+                </div>
+
+                <div class="apartado">
+                    <h3 onclick="toggleApartado(this)">Ver Todo</h3>
+                    <div class="apartado-content">
+                        <p>Opción 4 del menú principal → Muestra emergencias, clientes y tareas.</p>
+                        <img src="imagenes/captura19.png" width="600">
+                        <p>Opción 0 → Volver al menú principal.</p>
+                    </div>
+                </div>
+
+                <div class="apartado">
+                    <h3 onclick="toggleApartado(this)">Empleados</h3>
+                    <div class="apartado-content">
+                        <p>Opción 1 → Ver CEO.</p>
+                        <img src="imagenes/captura20.png" width="600">
+                        <p>Opción 2 → Ver empleados de caja.</p>
+                        <img src="imagenes/captura21.png" width="600">
+                        <p>Opción 3 → Ver empleados de cocina.</p>
+                        <img src="imagenes/captura22.png" width="600">
+                        <p>Opción 4 → Ver meseros.</p>
+                        <img src="imagenes/captura23.png" width="600">
+                        <p>Opción 0 → Volver al menú principal.</p>
+                    </div>
+                </div>
+
+                <div class="apartado">
+                    <h3 onclick="toggleApartado(this)">Búsquedas y Reportes</h3>
+                    <div class="apartado-content">
+                        <p>Opción 6 del menú principal → Acceso a búsquedas y reportes.</p>
+                        <p>Opción 1 → Estado detallado de las mesas.</p>
+                        <img src="imagenes/captura26.png" width="600">
+                        <p>Opción 2 → Ordenar clientes alfabéticamente.</p>
+                        <img src="imagenes/captura27.png" width="600">
+                        <p>Opción 0 → Volver al menú principal.</p>
+                        <img src="imagenes/captura28.png" width="600">
+                    </div>
+                </div>
+
+                <div class="apartado">
+                    <h3 onclick="toggleApartado(this)">Salir</h3>
+                    <div class="apartado-content">
+                        <p>Opción 6 → Salir del programa.</p>
+                        <img src="imagenes/captura24.png" width="600">
+                    </div>
+                </div>
+
             </div>
         </li>
 
